# solid-goggles

./: CMakeLists.txt
src/: ImageLabel.cpp  ImageLabel.h  MainWindow.cpp  MainWindow.h  Settings.h  VideoPage.cpp  VideoPage.h  main.cpp
